...
            "state" : "translated",
            "value" : "Organigrama"
          }
        }
      }
    },
    "menu.card.settings" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
...
            "state" : "translated",
            "value" : "Personajes"
          }
        }
      }
    },
    "upgrades.tab.permanent" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Permanent"
...
